@@ -4,7 +4,7 @@ ___________________________________
 |  |   |  |  |  |  |     |     |  |
 |  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
+ Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
 	Tama Communications Corporation
 
  This file is free software; as a special exception the author gives
@@ -18,6 +18,10 @@ ___________________________________
 		----------------------------------
 
 ChangeLog about GNU GLOBAL
+
+February 3 2010, Shigio YAMAGUCHI
+
+	* Use invisible temporary files instead of visible files (htags/assoc.c).
 
 February 1 2010, Hideki IWAMOTO
 
